Update Water Potability Classification.ipynb

--- a/Water Potability Classification.ipynb
+++ b/Water Potability Classification.ipynb
@@ -2258,7 +2258,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#XGBosst gives the best accuracy score among these and this model is selected."
+        "#RandomForestClassifier gives the best accuracy score among these and this model is selected."
       ],
       "metadata": {
         "id": "m5o7NkNzcmwi"
