--- a/Water Potability Classification.ipynb
+++ b/Water Potability Classification.ipynb
@@ -39,19 +39,19 @@
         "from sklearn.model_selection import train_test_split \n",
         "from sklearn.linear_model import LinearRegression \n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import precision_score,accuracy_score \n",
+        "from sklearn.metrics import accuracy_score \n",
         "\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from xgboost import XGBClassifier\n",
-        "\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
         "\n",
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.metrics import r2_score\n",
         "from sklearn import svm\n",
-        "from sklearn.metrics import ConfusionMatrixDisplay\n"
+       
       ],
       "metadata": {
         "id": "X2XKo0B4FQm6"
@@ -2163,7 +2163,6 @@
       "cell_type": "code",
       "source": [
         "#K-Nearest Neighbor(KNN) Classification\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
         "knc = KNeighborsClassifier(n_neighbors=2)\n",
         "knc.fit(X_train,y_train)\n",
         "y_pred_knc = knc.predict(X_test)\n",
