--- a/WP_Ömer.ipynb
+++ b/WP_Ömer.ipynb
@@ -1886,7 +1886,7 @@
         "acc_logr = accuracy_score(y_test,y_pred_logr)\n",
         "print('Accuracy of Logistic Regression :' ,acc_logr)\n",
         "print('**********')\n",
-        "success = cross_val_score(estimator = dtc, X=X_train, y=y_train, cv =10)\n",
+        "success = cross_val_score(estimator = logr, X=X_train, y=y_train, cv =10)\n",
         "print(success)\n",
         "#412 values are correct(TP) output, 244 values are incorrect outputs. There is no output for true negatives."
       ],
